--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -1,3 +1,95 @@
+@font-face {
+font-family: "Lato";
+src: url("Lato-Light.ttf")
+}
 body {
-  
+  background-color: #f1f1f2;
+  margin: 0;
+}
+#wrapper {
+  width: 1200px;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+}
+#nav {
+  position: sticky;
+  top: 180px;
+  background-color: #E4ECF2;
+}
+#content {
+  flex: 3;
+  height: 1200px;
+  background-color: #E4ECF2;
+  font-family: "Lato";
+  font-size: 16px;
+  line-height: 24px;
+}
+#col-1 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+#col-2 {
+  flex: 3;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+header {
+  width: 100%;
+  height: 180px;
+  background-color: #044C7F;
+}
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #044C7F;
+}
+ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+}
+li {
+  list-style: none;
+  height: 27px;
+  border-bottom: 1px solid #999;
+  font-family: "Lato";
+  font-size: 17px;
+  display: flex;
+  align-items: center;
+  padding: 10px 10px 5px 10px;
+}
+li:hover {
+  background-color: #cbd3d9;
+  text-decoration: none;
+}
+a {
+  text-decoration: none;
+}
+#typografi {
+  width: 100%;
+  height: 400px;
+  background-color: deeppink;
+}
+#farver {
+}
+#logo {
+
+}
+#navigation {
+
+}
+#kontainere {
+
+}
+.title {
+  font-family: "Lato";
+  font-size: 28px;
+  color: #000;
+  margin: 10px 0px 10px 0px;
+  padding: 0;
 }
