--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -24,6 +24,8 @@ body {
   font-family: "Lato";
   font-size: 16px;
   line-height: 24px;
+  padding: 0px 20px 0px 20px;
+  box-sizing: border-box;
 }
 #col-1 {
   flex: 1;
@@ -92,4 +94,12 @@ a {
   color: #000;
   padding: 20px 0px 10px 20px;
   margin: 0;
+}
+
+.typo-container {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid #999;
+  width: 100%;
+
 }
