--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -24,7 +24,7 @@ body {
   font-family: "Lato";
   font-size: 16px;
   line-height: 24px;
-  padding: 0px 20px 0px 20px;
+  padding: 20px 20px 20px 20px;
   box-sizing: border-box;
 }
 #col-1 {
@@ -74,8 +74,6 @@ a {
 }
 #typografi {
   width: 100%;
-  height: 400px;
-  background-color: deeppink;
 }
 #farver {
 }
@@ -101,5 +99,6 @@ a {
   flex-direction: row;
   border-bottom: 1px solid #999;
   width: 100%;
+  margin-top: 40px;
 
 }
