--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -43,6 +43,9 @@ header {
   width: 100%;
   height: 180px;
   background-color: #044C7F;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 footer {
   width: 100%;
@@ -78,6 +81,10 @@ a {
 #farver {
 }
 #logo {
+  margin: 0px 0px 0px 40px;
+  width: 200px;
+}
+section#logo {
 
 }
 #navigation {
