--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -97,8 +97,7 @@ section#logo {
   font-family: "Lato";
   font-size: 34px;
   color: #000;
-  padding: 0;
-  margin: 0;
+  padding: 0px 0px 20px 0px;
 }
 
 .typo-container {
