--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1071,14 +1071,14 @@ a {
 }
 
 .boks {
-  background-color: #E4ECF2;
+  background-color: #f1f1f2;
   flex: 1;
   display: flex;
   flex-direction:row;
   flex-wrap: wrap;
   justify-content: center;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  border-radius: 20px;
+  margin: 20px 0px 20px 0px;
   box-sizing: border-box;
 }
 .boks-tekst_left {
