--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -105,8 +105,19 @@ section#logo {
   flex-direction: row;
   border-bottom: 1px solid #999;
   width: 100%;
-  margin-top: 40px;
+  padding: 40px 0px 40px 0px;
   height: 65px;
+  align-items: center;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.example {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  right: 0;
+  margin: 0px 10px 0px 10px
 }
 
 h1 {
