--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -113,14 +113,13 @@ section#logo {
 }
 
 .example {
-  display: flex;
-  justify-content: flex-end;
-  position: absolute;
   right: 0;
-  margin: 0px 10px 0px 10px
+  margin: 0px 10px 0px 10px;
+  flex: 1;
 }
 
 h1 {
+  flex: 8;
   font-family: "Lato";
   font-size: 40px;
   margin: 0;
@@ -128,6 +127,7 @@ h1 {
 }
 
 h2 {
+  flex: 8;
   font-family: "Lato";
   font-size: 30px;
   margin: 0;
@@ -135,6 +135,7 @@ h2 {
 }
 
 h3 {
+  flex: 8;
   font-family: "Lato";
   font-size: 20px;
   margin: 0;
@@ -142,6 +143,7 @@ h3 {
 }
 
 p.description {
+  flex: 8;
   font-family: "Lato";
   font-size: 16px;
   margin: 0;
