--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -96,7 +96,7 @@ section#logo {
   font-family: "Lato";
   font-size: 34px;
   color: #000;
-  padding: 5px 0px 20px 0px;
+  padding: 15px 0px 20px 0px;
 }
 
 .typo-container {
@@ -147,4 +147,33 @@ p.description {
   font-size: 16px;
   margin: 0;
   padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.primary-color {
+  flex: 1;
+  height: 30px;
+  background-color: #044c7f;
+}
+.secondary-color {
+  flex: 1;
+  height: 30px;
+  background-color: #216393;
+}
+.optional-color {
+  flex: 1;
+  height: 30px;
+  background-color: #00a19b;
+}
+.color-example {
+  text-align: center;
+  padding: 5px 0px 5px 0px;
+}
+.logo-example {
+  width: 175px;
+  height: auto;
+  margin: 0px 10px 0px 10px;
+  padding: 0px 5px 0px 5px;
+  text-align: right;
 }
