--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -35,6 +35,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  background-color: #E4ECF2;
 }
 #col-2 {
   flex: 3;
@@ -60,6 +61,7 @@ ul {
   flex-direction: column;
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 li {
   list-style: none;
