--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,9 +359,11 @@ margin: 10px;
 
 
 #container {
-  background-color: #216393;
   width: 100%;
   margin: auto;
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: #e4ecf2;
 }
 
 .image_section1 {
@@ -1081,6 +1083,18 @@ a {
   justify-content: center;
   border-radius: 20px;
   margin: 20px 0px 20px 0px;
+  box-sizing: border-box;
+}
+.forside-boks {
+  background-color: #f1f1f2;
+  flex: 1;
+  display: flex;
+  flex-direction:row;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 20px;
+  margin: 20px 0px 20px 0px;
+  padding: 20px 0px 20px 0px;
   box-sizing: border-box;
 }
 .boks-tekst_left {
