--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -95,7 +95,6 @@ section#logo {
 
 }
 #kontainere {
-
 }
 .section-title {
   font-family: "Lato";
@@ -246,6 +245,7 @@ p.typo-description {
 }
 .boks {
   width: 100%;
+  height: 200px;
   background-color: #f1f1f2;
   border-radius: 20px;
   display: flex;
