--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -97,7 +97,7 @@ a:link, a:hover, a:visited, a:active {
 }
 section#logo {
   border-bottom: 1px solid #999;
-  padding: 20px 0px 20px 0px;
+  padding: 20px 0px 40px 0px;
 }
 #navigation {
 
@@ -201,6 +201,7 @@ p.typo-description {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 .profile-button {
     display: flex;
