--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -114,7 +114,7 @@ section#logo {
   font-size: 50px;
   color: #fff;
   padding: 15px 0px 30px 0px;
-  text-shadow: 3px 3px 1px #888;
+  text-shadow: 3px 3px 1px #666;
 }
 .typo-container {
   display: flex;
@@ -160,7 +160,37 @@ h3 {
 
 p.typo-description {
   flex: 8;
-  font-family: "Lato";
+  font-family: "Lato-Regular";
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+p.typo-description1 {
+  flex: 8;
+  font-family: "Lato-Light";
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+p.typo-description2 {
+  flex: 8;
+  font-family: "Cabin-Sketch-Reg";
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+p.typo-description3 {
+  flex: 8;
+  font-family: Verdana;
   font-size: 16px;
   margin: 0;
   padding: 0;
