--- a/styleguide/style.css
+++ b/styleguide/style.css
@@ -170,7 +170,7 @@ p.typo-description {
 }
 p.typo-description1 {
   flex: 8;
-  font-family: "Lato-Light";
+  font-family: "Lato";
   font-size: 16px;
   margin: 0;
   padding: 0;
